--- a/everest.yaml
+++ b/everest.yaml
@@ -4,3 +4,6 @@
   Dependencies:
     - Name: Everest
       Version: 1.4157.0
+  OptionalDependencies:
+    - Name: CavernHelper
+      Version: 1.3.7
