--- a/everest.yaml
+++ b/everest.yaml
@@ -1,9 +1,9 @@
 - Name: SSMHelper
   Version: 1.2.3
-  DLL: Code/SSMHelper.dll
+  DLL: bin/SSMHelper.dll
   Dependencies:
-    - Name: Everest
-      Version: 1.4157.0
+    - Name: EverestCore
+      Version: 1.4673.0
   OptionalDependencies:
     - Name: CavernHelper
       Version: 1.3.7
